travelagency html/css

--- a/less/places.less
+++ b/less/places.less
@@ -125,7 +125,7 @@
     height: 190px;
 
     border: 1px solid #888888;
-    background: url("../img/Au.png") no-repeat 50% 50%;
+    background: url("../img/NAmerica.png") no-repeat 50% 50%;
 }
 
 .places--samerica::before {
@@ -139,5 +139,5 @@
     height: 190px;
 
     border: 1px solid #888888;
-    background: url("../img/Au.png") no-repeat 50% 50%;
+    background: url("../img/SAmerica.png") no-repeat 50% 50%;
 }
